hero image added

--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -2,6 +2,7 @@
 
 .header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 53px 0;
