--- a/src/assets/scss/Hero.scss
+++ b/src/assets/scss/Hero.scss
@@ -1,5 +1,50 @@
-.hero_container{
-    min-height: 100vh;
-    padding: 0 12.1rem;
+@import "./Variable.scss";
+
+.hero_container {
+    padding: 0 10rem;
+    width: 100%;
     background: linear-gradient(292.12deg, #62BADA -35.02%, #C9E7F2 78.96%);
+
+    .container {
+        display: flex;
+        height: 100vh;
+        flex-wrap: wrap;
+
+        .hero_title_box {
+            flex: 1.14;
+
+            h1 {
+                font-size: 6.0rem;
+                font-weight: $font-weight-bold;
+                line-height: 80px;
+            }
+
+            p {
+                padding: 2.0rem 0 0 0;
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 30px;
+                /* or 150% */
+
+                letter-spacing: -0.02em;
+
+            }
+        }
+
+        .image_box {
+
+            flex: .86;
+
+            img {
+                position: absolute;
+                width: 508.64px;
+                height: 966px;
+                left: 743px;
+                top: 71px;
+
+            }
+
+        }
+
+    }
 }
