--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -16,6 +16,7 @@
 
     .header_item_box {
         font-size: 1.4rem;
+        font-weight: $font-weight-regular;
 
         ul {
             display: flex;
@@ -25,15 +26,22 @@
             li {
                 text-decoration: none;
                 list-style: none;
+
+                a {
+                    text-decoration: none;
+                    color: $primary-color;
+                }
             }
         }
     }
 
     .header_buttons_box {
         font-size: 1.4rem;
+        font-weight: $font-weight-regular;
         display: flex;
         gap: 50px;
         justify-content: space-between;
+        text-decoration: none;
 
         button {
             background-color: transparent;
@@ -41,11 +49,12 @@
             cursor: pointer;
 
         }
+
         button:last-child {
             width: 137px;
             height: 52px;
             background-color: $header-button-color;
             color: $color-white;
-          }
+        }
     }
 }
