--- a/src/assets/scss/Hero.scss
+++ b/src/assets/scss/Hero.scss
@@ -22,12 +22,143 @@
             p {
                 padding: 2.0rem 0 0 0;
                 font-weight: 500;
-                font-size: 20px;
-                line-height: 30px;
-                /* or 150% */
-
+                font-size: 2rem;
+                line-height: 30spx;
+                font-weight: $font-weight-regular;
+                color: $primary-color-lite;
                 letter-spacing: -0.02em;
 
+            }
+
+            .hero_button_box {
+                display: flex;
+                align-items: center;
+                padding: 5.6rem 0;
+
+                button {
+                    margin: 0 5.0rem 0 0;
+                    height: 60px;
+                    width: 142px;
+                    border-radius: 47px;
+                    background-color: $secondary-color;
+                    border: none;
+                    cursor: pointer;
+                    color: $color-white;
+                }
+
+                .wave-box {
+                    position: relative;
+
+                    .play_button {
+                        height: 60px;
+                        width: 60px;
+                        background: #22D497;
+                        border-radius: 47px;
+                        display: flex;
+                        align-items: center;
+                        position: relative;
+                        z-index: 9;
+
+                        .triangle {
+                            width: 20px;
+                            height: 20px;
+                            margin: 0 38%;
+                            background: transparent;
+                            border-top: 15px solid transparent;
+                            border-left: 20px solid $color-white;
+                            border-bottom: 15px solid transparent;
+                            border-right: 15px solid transparent;
+                        }
+                    }
+
+                    .iq-waves {
+                        position: absolute;
+                        width: 14rem;
+                        height: 14rem;
+                        left: -45px;
+                        top: -45px;
+                        z-index: 2;
+                        float: right;
+
+                        .waves {
+                            position: absolute;
+                            width: 384px;
+                            width: 15rem;
+                            height: 384px;
+                            height: 15rem;
+                            background: rgba(255, 255, 255, 0.2);
+                            opacity: 0;
+                            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                            border-radius: 320px;
+                            background-clip: padding-box;
+                            -webkit-animation: waves 3s ease-in-out infinite;
+                            animation: waves 3s ease-in-out infinite;
+
+
+                        }
+
+                        .wave-1 {
+                            animation-delay: 0s;
+                        }
+
+                        .wave-2 {
+                            animation-delay: 1s;
+                        }
+
+                        .wave-3 {
+                            animation-delay: 2s;
+                        }
+
+                        @-webkit-keyframes waves {
+                            0% {
+                                -webkit-transform: scale(0.2, 0.2);
+                                transform: scale(0.2, 0.2);
+                                opacity: 0;
+                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                            }
+
+                            50% {
+                                opacity: 0.9;
+                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+                            }
+
+                            100% {
+                                -webkit-transform: scale(0.9, 0.9);
+                                transform: scale(0.9, 0.9);
+                                opacity: 0;
+                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                            }
+                        }
+
+                        @keyframes waves {
+                            0% {
+                                -webkit-transform: scale(0.2, 0.2);
+                                transform: scale(0.2, 0.2);
+                                opacity: 0;
+                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                            }
+
+                            50% {
+                                opacity: 0.9;
+                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+                            }
+
+                            100% {
+                                -webkit-transform: scale(0.9, 0.9);
+                                transform: scale(0.9, 0.9);
+                                opacity: 0;
+                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                            }
+                        }
+                    }
+                }
+
+                .play-button-text {
+                    color: $secondary-color;
+                    font-weight: $font-weight-regular;
+                    font-size: 1.7rem;
+                    margin-left: 11px;
+                }
             }
         }
 
