--- a/src/assets/scss/Variable.scss
+++ b/src/assets/scss/Variable.scss
@@ -1,16 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap');
 
 // Variables
-$primary-color: #000000; // Dark Blue
-$secondary-color: #31d35c; // Lime Green
-$tertiary-color: #2bb7da; // Bright Cyan
-
-$header-button-color:#4F46BA;
-
-$grayish-blue: #9698a6;
-$grayish-blue-light: #f3f4f6;
-$light-gray: #fafafa;
+$primary-color: #000000;
+$primary-color-lite: #64607D;
+$secondary-color: #3734A9;
+$tertiary-color: #FF7F5C;
 $color-white: #ffffff;
+
+$header-button-color: #4F46BA;
 
 // TYPOGRAPHY
 $primary-font-family: 'Manrope', sans-serif;
@@ -18,7 +15,9 @@ $default-font-size: 1.6rem;
 
 // FONT
 $font-weight-light: 300;
-$font-weight-regular: 400;
+$font-weight-semi-light: 400;
+$font-weight-regular: 500;
+$font-weight-semi-bold: 700;
 $font-weight-bold: 800;
 
 
