--- a/src/assets/scss/Variable.scss
+++ b/src/assets/scss/Variable.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap');
 
-// Variables
+/* Variables */
 $primary-color: #000000;
 $primary-color-lite: #64607D;
 $secondary-color: #3734A9;
@@ -9,25 +9,13 @@ $color-white: #ffffff;
 
 $header-button-color: #4F46BA;
 
-// TYPOGRAPHY
+/* TYPOGRAPHY */
 $primary-font-family: 'Manrope', sans-serif;
 $default-font-size: 1.6rem;
 
-// FONT
+/* FONT */
 $font-weight-light: 300;
 $font-weight-semi-light: 400;
 $font-weight-regular: 500;
 $font-weight-semi-bold: 700;
 $font-weight-bold: 800;
-
-
-html {
-	font-size: 62.5%;
-}
-
-body {
-	box-sizing: border-box;
-	font-family: $primary-font-family;
-	font-size: $default-font-size;
-	color: $primary-color;
-}
