menu toggle functionality added

--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -106,7 +106,7 @@
 
             .header_buttons_box {
                 flex-direction: column;
-                gap: 0;
+                gap: 2rem;
             }
 
 
