--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -1,6 +1,8 @@
 @import "./Variable.scss";
 
 .navigation {
+    max-width: 1280px;
+    margin: auto;
     .nav-toggle {
         display: none;
     }
@@ -68,14 +70,15 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 870px) {
     .navigation {
-        color:$color-white;
+        color: $color-white;
+
         .nav-toggle {
             display: block;
             position: absolute;
             right: 2rem;
-            top:2rem;
+            top: 2rem;
         }
 
         .header {
@@ -83,14 +86,17 @@
             text-align: center;
             gap: 0;
             background-color: $color-white;
+
             .header_logo_box {
                 img {
                     position: absolute;
                     left: 2rem;
                 }
             }
+
             .header_item_box {
                 width: 100%;
+
                 ul {
                     flex-direction: column;
                     padding: 0;
