--- a/src/assets/scss/Hero.scss
+++ b/src/assets/scss/Hero.scss
@@ -1,7 +1,7 @@
 @import "./Variable.scss";
 
 .hero_container {
-    padding: 0 10rem;
+    padding: 0 10%;
     height: 100vh;
     width: 100%;
     background: linear-gradient(292.12deg, #62BADA -35.02%, #C9E7F2 78.96%);
@@ -9,9 +9,11 @@
 
     .container {
         display: flex;
+        justify-content: center;
         flex-wrap: wrap;
         height: 100%;
-
+        max-width: 1280px;
+        margin: auto;
         .hero_title_box {
             flex: 1.14;
 
@@ -184,12 +186,7 @@
             }
         }
 
-        .image_box img{
-            // background-image: url("../images/hand.png");
-            // flex: .86;
-            // background-position: 10px -50px;
-            // background-size: 450px;
-            // background-repeat: no-repeat;
+        .image_box img {
             flex: 1;
             height: 800px;
 
@@ -199,26 +196,29 @@
 
 }
 
-@media screen and (max-width: 768px) {
-    .hero_container{
+@media screen and (max-width: 870px) {
+    .hero_container {
         padding: 0 1rem;
-        height:fit-content;
-        .container{
+        height: fit-content;
+
+        .container {
             flex-direction: column;
+            justify-content: center;
+
             .hero_title_box {
-                flex: 1.14;
-    
+                flex: 0 0 50%;
+
                 h1 {
                     font-size: 4rem;
                     padding-top: 5rem;
                     line-height: 40px;
                 }
-    
+
                 .hero_button_box {
                     display: flex;
                     align-items: center;
                     padding: 5.6rem 0 5.3rem 0;
-    
+
                     button {
                         margin: 0 5.0rem 0 0;
                         height: 60px;
@@ -229,17 +229,20 @@
                         cursor: pointer;
                         color: $color-white;
                     }
-    
+
                     .play-button-text {
                         display: none;
                     }
                 }
-    
+
             }
-            .image_box img{
-                flex: 1;
+
+            .image_box img {
+                justify-content: center;
+                flex: 0 0 50%;
+                margin: auto;
                 height: auto;
-    
+
             }
         }
     }
