--- a/src/assets/scss/Hero.scss
+++ b/src/assets/scss/Hero.scss
@@ -3,6 +3,8 @@
 .hero_container {
     padding: 0 10%;
     height: 100vh;
+    max-height: 1100px;
+    min-height: 640px;
     width: 100%;
     background: linear-gradient(292.12deg, #62BADA -35.02%, #C9E7F2 78.96%);
     overflow: hidden;
