--- a/src/assets/scss/Hero.scss
+++ b/src/assets/scss/Hero.scss
@@ -6,27 +6,31 @@
     height: 100vh;
     max-height: 1100px;
     min-height: 640px;
+    min-height: -webkit-fill-available;
     width: 100%;
     background: linear-gradient(292.12deg, #62BADA -35.02%, #C9E7F2 78.96%);
     overflow: hidden;
-    .fill1{
+
+    .fill1 {
         position: absolute;
-        right:0;
+        right: 0;
         width: 4.5%;
     }
-    .fill2{
+
+    .fill2 {
         position: absolute;
         left: 0;
         bottom: 2%;
         width: 5%;
 
     }
-    .fill3{
+
+    .fill3 {
         margin-bottom: -11%;
         width: 8%;
         position: absolute;
-        bottom:0;
-        right:0;
+        bottom: 0;
+        right: 0;
     }
 
     .container {
@@ -237,6 +241,20 @@
                     padding-top: 5rem;
                     line-height: 40px;
                 }
+                .bellow-button-tick {
+
+                .first-tick-box {
+                    .text{
+                        font-size: 1.4rem;
+                    }
+                }
+
+                .second-tick-box {
+                    .text{
+                        font-size: 1.4rem;
+                    }
+                }
+            }
 
                 .hero_button_box {
                     display: flex;
@@ -269,5 +287,41 @@
 
             }
         }
+    }
+}
+
+
+@media (min-width: 871px) and (max-width: 1024px) {
+    .hero_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 1rem;
+        height: 90rem;
+
+        .container {
+            // flex-direction: column;
+            justify-content: center;
+            flex-wrap: nowrap;
+
+            .hero_title_box {
+                flex: 1;
+
+                h1 {
+                    line-height: 4rem;
+                    line-height: 6rem;
+                    letter-spacing: -0.03em;
+                }
+            }
+            .image_box img {
+                justify-content: center;
+                flex: 0 0 50%;
+                margin: auto;
+                height: auto;
+
+            }
+
+        }
+
     }
 }
