--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -3,7 +3,7 @@
 .navigation {
     max-width: 1280px;
     margin: auto;
-    .nav-toggle {
+    .nav_toggle {
         display: none;
     }
 
@@ -74,7 +74,7 @@
     .navigation {
         color: $color-white;
 
-        .nav-toggle {
+        .nav_toggle {
             display: block;
             position: absolute;
             right: 2rem;
