--- a/src/assets/scss/Variable.scss
+++ b/src/assets/scss/Variable.scss
@@ -6,6 +6,10 @@ $primary-color-lite: #64607D;
 $secondary-color: #3734A9;
 $tertiary-color: #FF7F5C;
 $color-white: #ffffff;
+$color-milk-white: #F5F6F8;
+$color-gray: #c4c4c47d;
+;
+
 
 $header-button-color: #4F46BA;
 
@@ -17,5 +21,6 @@ $default-font-size: 1.6rem;
 $font-weight-light: 300;
 $font-weight-semi-light: 400;
 $font-weight-regular: 500;
+$font-weight-semi-regular:600;
 $font-weight-semi-bold: 700;
 $font-weight-bold: 800;
