--- a/src/assets/scss/SectionHeading.scss
+++ b/src/assets/scss/SectionHeading.scss
@@ -1,51 +1,54 @@
 @import "./Variable.scss";
-.section_heading_container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+.section_heading_container {
     padding: 0 8%;
     height: min-content;
-    width: 100%;
-    margin: auto;
+
     // background-color: $color-milk-white;
-    .section_heading_wrapper{
+    .section_heading_wrapper {
         display: flex;
-        align-items: center;
+        flex-wrap: wrap;
         justify-content: space-between;
         max-width: 1280px;
-        width: 100%;
         margin: 6rem auto;
-        :nth-child(2){
-            padding: auto 5rem auto auto;
-        }
-        .section_heading_content{
-            margin-right: 20rem ;
+
+        .section_heading_content {
+            margin-right: 20rem;
             flex: 2;
-            h2{
+
+            h2 {
                 font-size: 5.6rem;
                 line-height: 6.6rem;
+                letter-spacing: -0.03em;
                 font-weight: $font-weight-bold;
             }
-            p{
+
+            p {
                 font-size: 1.6rem;
                 line-height: 2.9rem;
+                letter-spacing: -0.02em;
             }
         }
-        .section_heading_quote{
+
+        .section_heading_quote {
             position: relative;
-            width: 402px;
-            flex: 1.2;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            flex: 1.5;
             background-color: $color-gray;
             padding: 3rem;
             border-radius: 2rem;
-            img{
+
+            img {
                 height: 4.4rem;
                 width: auto;
                 position: absolute;
                 top: -2.2rem;
                 left: 10;
             }
-            .quote{
+
+            .quote {
                 font-size: 1.5rem;
                 quotes: none;
                 line-height: 2.2rem;
@@ -53,14 +56,66 @@
                 font-weight: $font-weight-semi-regular;
                 margin-bottom: 1rem;
             }
-            .author{
+
+            .author {
                 font-size: 1.5rem;
                 quotes: none;
                 line-height: 2.2rem;
                 letter-spacing: -0.03em;
-                font-weight: $font-weight-bold;
+                font-weight: $font-weight-semi-regular;
             }
 
+        }
+    }
+}
+
+@media (min-width: 871px) and (max-width: 1024px) {
+    .section_heading_container {
+        .section_heading_wrapper {
+            .section_heading_content {
+                margin-right: 0;
+                h2 {
+                    font-size: 4.6rem;
+                    line-height: 5.6rem;
+                }
+
+                p {}
+            }
+
+            .section_heading_quote {
+                img {}
+
+                .quote {}
+
+                .author {}
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 870px) {
+    .section_heading_container {
+        .section_heading_wrapper {
+            gap: 5rem;
+            .section_heading_content {
+                margin: auto;
+                flex: none;
+                width: 100%;
+                h2 {
+                    font-size: 4rem;
+                    line-height: 5rem;
+                }
+
+                // p {}
+            }
+
+            .section_heading_quote {
+                // img {}
+
+                // .quote {}
+
+                // .author {}
+            }
         }
     }
 }
