value props component added

--- a/src/assets/scss/Variable.scss
+++ b/src/assets/scss/Variable.scss
@@ -7,6 +7,8 @@ $secondary-color: #3734A9;
 $tertiary-color: #FF7F5C;
 $color-white: #ffffff;
 $color-milk-white: #F5F6F8;
+$color-background-main: #FAFBFF;
+
 $color-gray: #c4c4c47d;
 ;
 
@@ -21,6 +23,6 @@ $default-font-size: 1.6rem;
 $font-weight-light: 300;
 $font-weight-semi-light: 400;
 $font-weight-regular: 500;
-$font-weight-semi-regular:600;
+$font-weight-semi-regular: 600;
 $font-weight-semi-bold: 700;
 $font-weight-bold: 800;
