--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,7 @@ body {
   font-family: $primary-font-family;
   font-size: $default-font-size;
   color: $primary-color;
+  background-color: $color-background-main;
 }
 
 /* Remove default margin */
