--- a/src/assets/scss/Companies.scss
+++ b/src/assets/scss/Companies.scss
@@ -41,20 +41,20 @@
         }
     }
 }
+
 @media screen and (max-width: 870px) {
     .companies_container {
-    
+
         .wrapper {
-    
+
             .text {
                 font-size: 2rem;
                 text-align: center;
                 font-weight: $font-weight-regular;
             }
-    
+
             .companies {
-                flex-basis: 33.333333%
-                img {
+                flex-basis: 33.333333% img {
                     width: auto;
                 }
             }
