--- a/src/assets/scss/SectionHeading.scss
+++ b/src/assets/scss/SectionHeading.scss
@@ -4,7 +4,6 @@
     padding: 0 8%;
     height: min-content;
 
-    // background-color: $color-milk-white;
     .section_heading_wrapper {
         display: flex;
         flex-wrap: wrap;
@@ -74,6 +73,7 @@
         .section_heading_wrapper {
             .section_heading_content {
                 margin-right: 0;
+
                 h2 {
                     font-size: 4.6rem;
                     line-height: 5.6rem;
@@ -97,25 +97,28 @@
     .section_heading_container {
         .section_heading_wrapper {
             gap: 5rem;
+
             .section_heading_content {
                 margin: auto;
                 flex: none;
                 width: 100%;
+
                 h2 {
                     font-size: 4rem;
                     line-height: 5rem;
                 }
 
+                //kept for future changes
                 // p {}
             }
 
-            .section_heading_quote {
-                // img {}
+            // .section_heading_quote {
+            //     img {}
 
-                // .quote {}
+            //     .quote {}
 
-                // .author {}
-            }
+            //     .author {}
+            // }
         }
     }
 }
