svg added in Section Content Component along with minor correction

--- a/src/assets/scss/Hero.scss
+++ b/src/assets/scss/Hero.scss
@@ -199,6 +199,7 @@
             .bellow_button_tick {
                 display: flex;
                 gap: 29px;
+                color: $tertiary-color;
 
                 .first_tick_box {
                     align-items: center;
