--- a/src/assets/scss/Variable.scss
+++ b/src/assets/scss/Variable.scss
@@ -4,10 +4,12 @@
 $primary-color: #000000;
 $primary-color-lite: #64607D;
 $secondary-color: #3734A9;
-$tertiary-color: #FF7F5C;
+$tertiary-color: #757095;
+;
 $color-white: #ffffff;
 $color-milk-white: #F5F6F8;
 $color-background-main: #FAFBFF;
+$color-highlight: #DFF6FF;
 
 $color-gray: #c4c4c47d;
 ;
