--- a/src/assets/scss/SectionContent.scss
+++ b/src/assets/scss/SectionContent.scss
@@ -9,7 +9,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         max-width: 1280px;
-        margin: 6rem auto;
+        margin: 12rem auto;
         gap: 7rem;
 
         .section_left {
@@ -47,6 +47,7 @@
                 display: flex;
                 padding: 16px;
                 margin: 1.4rem;
+                align-items: center;
                 border-radius: 10px;
                 background: $color-white;
                 gap: 1.5rem;
@@ -68,7 +69,7 @@
                         letter-spacing: -0.02em;
                         font-weight: $font-weight-semi-bold;
                         width: max-content;
-                        background: $color-highlight;
+                        background: $color-white-blue;
                         padding: 0.6rem;
                         border-radius: 3rem;
                     }
@@ -151,6 +152,7 @@
             }
         }
     }
+
 }
 
 
