--- a/src/assets/scss/Variable.scss
+++ b/src/assets/scss/Variable.scss
@@ -5,7 +5,8 @@ $primary-color: #000000;
 $primary-color-lite: #64607D;
 $secondary-color: #3734A9;
 $tertiary-color: #757095;
-;
+$color-white-blue: rgb(235 235 246);
+
 $color-white: #ffffff;
 $color-milk-white: #F5F6F8;
 $color-background-main: #FAFBFF;
