--- a/src/assets/scss/SectionContent.scss
+++ b/src/assets/scss/SectionContent.scss
@@ -22,18 +22,20 @@
             background-color: $color-highlight;
             border-radius: 2rem;
             padding: 4rem;
-            overflow: hidden;
+            // overflow: hidden;
 
             .green {
                 position: absolute;
                 bottom: 0;
                 left: 0;
+                border-radius: 0 0 0 2rem;
             }
 
             .orange {
                 position: absolute;
                 top: 0;
                 left: 0;
+                border-radius: 2rem 0 0 0;
             }
 
             .blue {
@@ -42,17 +44,39 @@
                 top: 35%;
             }
 
+            .ovel {
+                position: absolute;
+                right: -3rem;
+                top: -2rem;
+            }
 
             .profit {
                 display: flex;
-                padding: 16px;
-                margin: 1.4rem;
+                padding: 1.6rem;
                 align-items: center;
                 border-radius: 10px;
                 background: $color-white;
                 gap: 1.5rem;
                 box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.03), 0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0227778), 0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0182222), 0px 20px 13px rgba(0, 0, 0, 0.015), 0px 8.14815px 6.51852px rgba(0, 0, 0, 0.0117778), 0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00722222);
                 z-index: 2;
+                animation-name: floating;
+                animation-duration: 3s;
+                animation-iteration-count: infinite;
+                animation-timing-function: ease-in-out;
+
+                @keyframes floating {
+                    from {
+                        transform: translate(0, 0px);
+                    }
+
+                    65% {
+                        transform: translate(0, 15px);
+                    }
+
+                    to {
+                        transform: translate(0, -0px);
+                    }
+                }
 
                 .person_img {}
 
@@ -82,6 +106,27 @@
                 }
             }
 
+            .profit1 {
+                animation-delay: 1s;
+                margin: 1.4rem -3rem 1.4rem 3rem;
+            }
+
+            .profit2 {
+                animation-delay: 2s;
+                margin: 1.4rem -10rem 1.4rem 10rem;
+
+            }
+
+            .profit3 {
+                animation-delay: 3s;
+                margin: 1.4rem -7rem 1.4rem 7rem;
+            }
+
+            .profit4 {
+                animation-delay: 4s;
+                margin: 1.4rem -2rem 1.4rem 2rem;
+
+            }
 
 
         }
