--- a/src/assets/scss/SectionContent.scss
+++ b/src/assets/scss/SectionContent.scss
@@ -6,10 +6,11 @@
 
     .section_wrapper {
         display: flex;
+        align-items: flex-end;
         flex-wrap: wrap;
         justify-content: space-between;
         max-width: 1280px;
-        margin: 12rem auto;
+        margin: 15rem auto;
         gap: 7rem;
 
         .section_left {
@@ -22,7 +23,6 @@
             background-color: $color-highlight;
             border-radius: 2rem;
             padding: 4rem;
-            // overflow: hidden;
 
             .green {
                 position: absolute;
@@ -128,6 +128,11 @@
 
             }
 
+            .card_on_hand {
+
+                width: 50%;
+
+            }
 
         }
 
@@ -165,6 +170,10 @@
                 }
             }
 
+            .quote_box {
+                margin-top: 2.5rem;
+            }
+
             .hr {
                 height: 3vh;
                 border-top: 2px solid #c4c4c4;
@@ -194,6 +203,28 @@
                     }
                 }
 
+            }
+        }
+
+        .section_left_2 {
+            flex: 1;
+            background-color: $color-highlight;
+            border-radius: 2rem;
+
+            .chart {
+                position: relative;
+
+                img {
+                    position: absolute;
+                    width: 50%;
+                    left: -10rem;
+                    top: 14rem;
+                }
+            }
+
+            .card_on_hand {
+                margin-top: -15rem;
+                width: 60%;
             }
         }
     }
