features page createx

--- a/src/assets/scss/Variable.scss
+++ b/src/assets/scss/Variable.scss
@@ -11,6 +11,7 @@ $color-white: #ffffff;
 $color-milk-white: #F5F6F8;
 $color-background-main: #FAFBFF;
 $color-highlight: #DFF6FF;
+$color-highlight-second: #C9E7F2;
 
 $color-gray: #c4c4c47d;
 ;
