--- a/src/assets/scss/Hero.scss
+++ b/src/assets/scss/Hero.scss
@@ -226,12 +226,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 0 1rem;
-        height: 90rem;
+        padding: 0 8%;
 
         .container {
-            // flex-direction: column;
-            justify-content: center;
+            min-height: 75rem;
+            // justify-content: center;
             flex-wrap: nowrap;
 
             .hero_title_box {
@@ -257,17 +256,17 @@
     }
 }
 
-@media screen and (max-width: 870px) {
+@media (min-width: 481px) and (max-width: 870px) {
     .hero_container {
-        padding: 0 1rem;
+        padding: 0 8%;
         height: fit-content;
 
         .container {
-            flex-direction: column;
-            justify-content: center;
+            display: flex;
+            min-height: 110rem;
 
             .hero_title_box {
-                flex: 0 0 50%;
+                flex: 1;
 
                 h1 {
                     font-size: 4rem;
@@ -315,9 +314,73 @@
 
             .image_box img {
                 justify-content: center;
-                flex: 0 0 50%;
+                flex: 1;
                 margin: auto;
                 height: auto;
+
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .hero_container {
+        padding: 0 1rem;
+
+        .container {
+            min-height: 110rem;
+
+            .hero_title_box {
+                flex: 1;
+
+                h1 {
+                    font-size: 4rem;
+                    text-align: center;
+                    padding-top: 5rem;
+                    line-height: 40px;
+                }
+
+                p {
+                    text-align: center;
+                    width: 100%;
+                }
+
+                .bellow_button_tick {
+                    justify-content: space-around;
+
+                    .first_tick_box {
+                        .text {
+                            font-size: 1.4rem;
+                        }
+                    }
+
+                    .second_tick_box {
+                        .text {
+                            font-size: 1.4rem;
+                        }
+                    }
+                }
+
+                .hero_button_box {
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+
+                    button {
+                        margin: 0 5.0rem 0 0;
+
+                    }
+
+                    .play_button_text {
+                        display: none;
+                    }
+                }
+
+            }
+
+            .image_box img {
+                justify-content: center;
+                align-items: center;
 
             }
         }
