--- a/src/assets/scss/FrequentlyAsked.scss
+++ b/src/assets/scss/FrequentlyAsked.scss
@@ -4,22 +4,83 @@
     padding: 14rem 8% 14rem 8%;
     height: min-content;
 
-    .frequently_wrapper {
-        display: flex;
-        margin: auto;
+    .faq_wrapper {
         max-width: 1280px;
-        justify-content: space-between;
-        gap: 5rem;
+        margin: auto;
+        min-height: max-content;
 
-        .faq_section {
-            flex: 2;
+        h1 {
+            font-size: 7.1rem;
+            font-weight: $font-weight-bold;
+            line-height: 7.6rem;
+            letter-spacing: -0.03em;
+            margin: 0 0 5rem 0;
         }
 
-        .have_any_question {
-            flex: 1;
-            border: 1px solid #CFCFCF;
-            border-radius: 1rem;
-            background-color: $color-white;
+        .frequently_wrapper {
+            margin: auto;
+            position: relative;
+            gap: 5rem;
+            min-height: 55vh;
+
+            .faq_section {
+                position: absolute;
+                left: 0;
+                width: 58%;
+            }
+
+            .have_any_question {
+                position: absolute;
+                right: 0;
+                width: 38%;
+                display: flex;
+                flex-direction: column;
+                // align-items: center;
+                // justify-content: space-between;
+                height: 49rem;
+                border: 1px solid #cfcfcf;
+                border-radius: 1rem;
+                background-color: $color-white;
+                padding: 3rem;
+
+                .have_any_content {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    margin: 3rem 0 1rem 0;
+
+                    img {
+                        padding: 0 0 3rem 0;
+                    }
+
+                    h3 {
+                        font-size: 2.2rem;
+                        line-height: 2.2rem;
+                        padding: 0 0 3rem 0;
+                    }
+
+                    p {
+                        font-size: 1.6rem;
+                        line-height: 3.1rem;
+                        letter-spacing: -0.02em;
+                        text-align: center;
+                    }
+                }
+
+                .have_any_button {
+                    width: 100%;
+
+                    button {
+                        font-size: 1.6rem;
+                        line-height: 3.1rem;
+                        background: $color-orange;
+                        padding: 1.5rem;
+                        width: 100%;
+                        color: $color-white;
+                        border: none;
+                    }
+                }
+            }
         }
     }
 }
