--- a/src/assets/scss/Variable.scss
+++ b/src/assets/scss/Variable.scss
@@ -6,7 +6,7 @@ $primary-color-lite: #64607D;
 $secondary-color: #3734A9;
 $tertiary-color: #757095;
 $color-white-blue: rgb(235 235 246);
-
+$color-orange: #FF7F5C;
 
 $color-white: #ffffff;
 $color-milk-white: #F5F6F8;
