--- a/src/assets/scss/FrequentlyAsked.scss
+++ b/src/assets/scss/FrequentlyAsked.scss
@@ -1,7 +1,7 @@
 @import "./Variable.scss";
 
 .frequently_container {
-    padding: 14rem 8% 14rem 8%;
+    padding: 0 8% 14rem 8%;
     height: min-content;
 
     .faq_wrapper {
