--- a/src/assets/scss/Stats.scss
+++ b/src/assets/scss/Stats.scss
@@ -2,12 +2,16 @@
 
 .stats_container {
     background-color: $secondary-color;
+    padding: 0 8%;
+    height: min-content;
 
     .stats_wrapper {
         display: flex;
         flex-wrap: wrap;
-        padding: 6.3rem;
+        padding: 6.3rem 0;
         justify-content: space-between;
+        max-width: 1280px;
+        margin: 6rem auto;
 
         .text {
             color: $color-white;
@@ -33,8 +37,7 @@
                 }
 
                 .text {
-                    font-size: 3rem;
-                    line-height: 3.1rem;
+                    font-size: 2rem;
                     padding: 2rem 0;
                 }
             }
