--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -80,6 +80,10 @@
             position: absolute;
             right: 2rem;
             top: 2rem;
+            border: none;
+            color: white;
+            background-color: $primary-color;
+            padding: 1rem;
         }
 
         .header {
