--- a/src/assets/scss/FrequentlyAsked.scss
+++ b/src/assets/scss/FrequentlyAsked.scss
@@ -127,6 +127,7 @@
                         h3 {
                             font-size: 2.2rem;
                             line-height: 2.2rem;
+                            text-align: center;
                             padding: 0 0 3rem 0;
                         }
 
