--- a/src/assets/scss/Discover.scss
+++ b/src/assets/scss/Discover.scss
@@ -45,8 +45,8 @@
         height: min-content;
 
         .discover_wrapper {
-
-            padding: 4rem 1rem;
+            align-items: stretch;
+            padding: 4rem 3rem;
 
 
             .discover_title {
@@ -55,9 +55,9 @@
                 color: $color-white;
 
                 h2 {
-                    font-size: 4.5rem;
-                    line-height: 5.1rem;
-                    padding: 2rem;
+                    font-size: 4rem;
+                    line-height: 4.5rem;
+                    padding: 2rem 0;
                 }
             }
 
@@ -66,7 +66,7 @@
                     background: $color-orange;
                     border: none;
                     color: $color-white;
-                    padding: 1.5rem 8rem;
+                    padding: 1.5rem;
                     line-height: 3.1rem;
                     width: 100%;
                     border-radius: 0px;
