--- a/src/assets/scss/RecentBlog.scss
+++ b/src/assets/scss/RecentBlog.scss
@@ -106,3 +106,104 @@
     }
 
 }
+
+@media screen and (max-width: 870px) {
+    .blog_container {
+        padding: 0 8% 0 8%;
+        height: min-content;
+
+        .blog_wrapper {
+            max-width: 1280px;
+            margin: 15rem auto;
+
+            h1 {
+                font-size: 4rem;
+                font-weight: $font-weight-bold;
+                line-height: 9.5rem;
+                letter-spacing: -0.03em;
+            }
+
+            .blog_boxes {
+                display: flex;
+                flex-direction: column;
+                gap: 3rem;
+
+                h3 {
+                    font-size: 2.9rem;
+                    line-height: 3.6rem;
+                    letter-spacing: -0.02em;
+                    font-weight: $font-weight-semi-bold;
+                }
+
+                p {
+                    font-size: 1.6rem;
+                    line-height: 3.6rem;
+                    letter-spacing: 0.07em;
+                    text-transform: uppercase;
+                }
+
+                .blog_one {
+
+                    display: flex;
+                    justify-content: space-between;
+                    flex-direction: column-reverse;
+                    align-items: center;
+
+                    .blog_content {
+                        padding: 2.5rem;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 2rem;
+                    }
+
+                }
+
+                .blog_two {
+                    grid-area: blog_two;
+                    background: $color-white;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+
+                    .blog_content {
+                        padding: 2.5rem;
+                    }
+
+                }
+
+                .blog_three {
+                    grid-area: blog_three;
+                    background: $color-white;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+
+                    .blog_content {
+                        padding: 2.5rem;
+                    }
+
+
+                }
+
+                .blog_four {
+                    grid-area: blog_four;
+                    background: $color-white;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+
+                    .blog_content {
+                        padding: 2.5rem;
+                        display: flex;
+                        flex-direction: column;
+
+                    }
+
+
+                }
+            }
+
+        }
+
+    }
+}
