--- a/src/assets/scss/Testimonials.scss
+++ b/src/assets/scss/Testimonials.scss
@@ -65,3 +65,66 @@
     }
 
 }
+
+@media screen and (max-width: 480px) {
+    .testimonials_container {
+        padding: 5rem 8% 5rem 8%;
+
+
+        .testimonials_wrappers {
+            margin: auto;
+
+
+            h1 {
+                font-size: 4rem;
+                line-height: 4.5rem;
+            }
+
+            p {
+                font-size: 1.6rem;
+                font-weight: $font-weight-regular;
+                line-height: 2.9rem;
+                letter-spacing: -0.02em;
+                margin: 2rem 0;
+                max-width: 55ch;
+            }
+
+            .testimonials_boxes {
+                display: flex;
+                flex-direction: column;
+                overflow: hidden;
+                gap: 2rem;
+
+                h3 {
+                    font-size: 2.2rem;
+
+                }
+
+                p {
+                    font-size: 1.5rem;
+                }
+
+                .testimonial {
+                    display: flex;
+                    flex-direction: column-reverse;
+
+
+
+                    .testimonial_content {
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+                    .testimonial_img {}
+
+                }
+
+                :first-child {
+                    margin-right: 0rem;
+                }
+
+            }
+        }
+
+    }
+}
